force-app/main/default/objects/csfb__Scheduled_Conductor_History__c/fields/csfb__Conga_Conductor__c.field-meta.xml
<CustomField>
    <fullName>csfb__Conga_Conductor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conga Batch</label>
    <referenceTo>csfb__Conductor__c</referenceTo>
    <relationshipLabel>Scheduled Conga Batch History</relationshipLabel>
    <relationshipName>Scheduled_Conductor_History</relationshipName>
    <type>Lookup</type>
</CustomField>