force-app/main/default/objects/csfb__Scheduled_Conductor_History__c/fields/csfb__Dashboard_Link__c.field-meta.xml
<CustomField>
    <fullName>csfb__Dashboard_Link__c</fullName>
    <description>A link to the Conga Batch Dashboard for this schedule.</description>
    <label>Dashboard Link</label>
    <type>Url</type>
</CustomField>