force-app/main/default/objects/csfb__Scheduled_Conductor_History__c/fields/csfb__Date__c.field-meta.xml
<CustomField>
    <fullName>csfb__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>