force-app/main/default/objects/csfb__Scheduled_Conductor_History__c/fields/csfb__Number_of_Successes__c.field-meta.xml
<CustomField>
    <fullName>csfb__Number_of_Successes__c</fullName>
    <label>Number of Successes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>