force-app/main/default/objects/csfb__Scheduled_Conductor_History__c/fields/csfb__Total_Number_of_Records__c.field-meta.xml
<CustomField>
    <fullName>csfb__Total_Number_of_Records__c</fullName>
    <label>Total Number of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>